--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
                 <div class="card-body collapse" id="collapseOne">
                     <label class="card-title mt-2 mb-3">Position: </label><span id="position"> Grader</span><br>
                     <label class="card-title float-start">Notes: </label>
-                    <div class="notes-wrapper ">
+                    <div class="notes-wrapper welcome-notes">
                         <span id="notes">None</span>
                     </div>
                     <br>
@@ -98,7 +98,7 @@
             <div class="card-body collapse" id="collapseOne">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
                 <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper ">
+                <div class="notes-wrapper welcome-notes">
                     <span id="notes">None</span>
                 </div>
                 <br>
@@ -111,7 +111,7 @@
             <div class="card-body collapse" id="collapseOne">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
                 <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper ">
+                <div class="notes-wrapper welcome-notes">
                     <span id="notes">None</span>
                 </div>
                 <br>
@@ -124,7 +124,7 @@
             <div class="card-body collapse" id="collapseOne">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
                 <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper ">
+                <div class="notes-wrapper welcome-notes">
                     <span id="notes">None</span>
                 </div>
                 <br>
@@ -137,7 +137,7 @@
             <div class="card-body collapse" id="collapseOne">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
                 <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper ">
+                <div class="notes-wrapper welcome-notes">
                     <span id="notes">None</span>
                 </div>
                 <br>
@@ -150,7 +150,7 @@
             <div class="card-body collapse" id="collapseOne">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
                 <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper ">
+                <div class="notes-wrapper welcome-notes">
                     <span id="notes">None</span>
                 </div>
                 <br>
@@ -163,7 +163,7 @@
             <div class="card-body collapse" id="collapseOne">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
                 <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper ">
+                <div class="notes-wrapper welcome-notes">
                     <span id="notes">None</span>
                 </div>
                 <br>
@@ -176,7 +176,7 @@
             <div class="card-body collapse" id="collapseOne">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
                 <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper ">
+                <div class="notes-wrapper welcome-notes">
                     <span id="notes">None</span>
                 </div>
                 <br>
@@ -189,7 +189,7 @@
             <div class="card-body collapse" id="collapseOne">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
                 <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper ">
+                <div class="notes-wrapper welcome-notes">
                     <span id="notes">None</span>
                 </div>
                 <br>
@@ -202,7 +202,7 @@
             <div class="card-body collapse" id="collapseOne">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
                 <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper ">
+                <div class="notes-wrapper welcome-notes">
                     <span id="notes">None</span>
                 </div>
                 <br>
@@ -215,7 +215,7 @@
             <div class="card-body collapse" id="collapseOne">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
                 <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper ">
+                <div class="notes-wrapper welcome-notes">
                     <span id="notes">None</span>
                 </div>
                 <br>
@@ -228,7 +228,7 @@
             <div class="card-body collapse" id="collapseOne">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
                 <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper ">
+                <div class="notes-wrapper welcome-notes">
                     <span id="notes">None</span>
                 </div>
                 <br>
