edit notes wrapper height on welcome page

--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
                     <label class="card-title mt-2 mb-3">Position: </label><span id="position"> Grader</span><br>
                     <label class="card-title float-start">Notes: </label>
                     <div class="notes-wrapper welcome-notes">
-                        <span id="notes">None</span>
+                        <span id="notes">This is an <b>instructor</b> course to apply for this you must be a <b>graduate</b> student and be <b>GTA certified.</b> To learn more about <b>GTA certification</b><a href='https://catalog.umkc.edu/general-graduate-academic-regulations-information/international-graduate-student-academic-regulations/' target='_blank'> click here</a>.</span>
                     </div>
                     <br>
                 </div>
