fixed class error

--- a/src/applicants.html
+++ b/src/applicants.html
@@ -33,7 +33,7 @@
 			<button type="button" id="logout" class="btn btn-primary ">Logout</button>
         </div>
     
-        <div class="container applicants my-5" style="width:70%";>
+        <div class="container applicantspage my-5" style="width:70%";>
             <h2> Applicants for <span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h2>
 	<div class="" id="filter">	
 	<div id="major">
