--- a/src/applicants.html
+++ b/src/applicants.html
@@ -175,7 +175,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             </div>-->
             <div class="modal-body">
-				<iframe id="iframepdf" src="files/error.jpg" width="100%" height="580" ></iframe>
+				<iframe id="iframepdf" src="" width="100%" height="580" ></iframe>
                 <!--<iframe src="files/transcript.pdf" width="100%" height="580" frameborder="0" ></iframe>-->
             </div>
 			<div class="modal-footer">
