--- a/src/admin.html
+++ b/src/admin.html
@@ -21,10 +21,9 @@
       </div>
       <div class="divider"></div>
     <div class="container-title sticky-top">
-        <h2 class="page-title">Open Positions</h2>
-        <div>
-            <a href="login.html" target="_blank" id="newbutton" value="" class="btn-apply btn btn-primary float-end">Logout</a>
-        </div>
+        <h2 class="page-title">Open Positions
+            <a href="login.html" target="_blank" id="newbutton" value="" class="btn-apply btn btn-primary" style="display:inline; margin-left:25px;">Logout</a>
+        </h2>
         <div class="add-button">
 			<a id="newbutton" href="createposition.html?new" target="_blank" id="newbutton" value=""
                 class="btn-apply btn btn-primary float-end">Add Position</a>
