code clean up + format and admin page media screen

--- a/src/studentform.html
+++ b/src/studentform.html
@@ -10,7 +10,7 @@
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style/css.css">
   <link rel="icon" href="assets/umkc-logo.png">
-    <!--Script added for bootstrap-->
+  <!--Script added for bootstrap-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
@@ -34,7 +34,8 @@
   <div class="container-title sticky-top">
     <h2 class="page-title">Application Form</h2>
     <div>
-      <a href="login.html" target="_blank" id="newbutton" value="" class="btn-apply btn btn-primary float-end">Logout</a>
+      <a href="login.html" target="_blank" id="newbutton" value=""
+        class="btn-apply btn btn-primary float-end">Logout</a>
     </div>
   </div>
 
