--- a/src/admin.html
+++ b/src/admin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,16 +19,17 @@
     <div class="header">
         <img src="assets/umkc-logo2.png" class="img-header" width="180px">
         <h3 class="header-title">Science and Engineering</h3>
-      </div>
-      <div class="divider"></div>
+    </div>
+    <div class="divider"></div>
     <div class="container-title sticky-top">
-        <h2 class="page-title">Open Positions
-            <a href="login.html" target="_blank" id="newbutton" value="" class="btn-apply btn btn-primary" style="display:inline; margin-left:25px;">Logout</a>
+        <h2 class="page-title">Positions
         </h2>
+
         <div class="add-button">
-			<a id="newbutton" href="createposition.html?new" target="_blank" id="newbutton" value=""
+            <a id="newbutton" href="createposition.html?new" target="_blank" id="newbutton" value=""
                 class="btn-apply btn btn-primary float-end">Add Position</a>
         </div>
+
         <div class="input-group search-bar">
             <input type="text" id="Search" onkeyup="Search()" class="form-control search-input"
                 placeholder="Search Class" aria-label="Search Position" aria-describedby="search-addon" />
@@ -35,22 +37,12 @@
                 <i class="fa fa-search"></i>
             </span>
         </div>
+
+        <div>
+            <a href="login.html" target="_blank" id="newbutton" value=""
+                class="ms-3 btn-apply btn float-end me-0">Logout</a>
+        </div>
     </div>
-	
-    <!--<div class="text-center admin-items">
-        <div class="input-group search-bar">
-            <input type="text" id="Search" onkeyup="Search()" class="form-control" placeholder="Search Class"
-                aria-label="Search Position" aria-describedby="search-addon" />
-            <span class="btn btn-primary" id="advanced-search-button" type="button">
-                <i class="fa fa-search"></i>
-            </span>
-        </div>
-    
-        <div class="add-button">
-            <a id="newbutton" href="createposition.html?new" target="_blank" value=""
-                class="open-position-btn2 btn btn-primary admin-items mb-4">Add Position</a>
-        </div>
-    </div>-->
 
     <div class="mb-3 p-3 card filter card-filter sticky-left">
         <h5>Filter by <i class="bi bi-funnel"></i></h5>
@@ -93,121 +85,49 @@
             <label class="checkbox form-check-label"><input class="form-check-input hasapplicants" type="checkbox"
                     id="noapplicants" value="noapplicants" onchange="changeCheckbox(this)" />No Applicants </label><br>
         </div>
-		<div class="mt-3 form-check">
+        <div class="mt-3 form-check">
             <label class="form-check-label"><input class="form-check-input hasapplicants" type="radio"
-                     name="collapserdb" onchange="collapseCards('show')" checked />Show</label><br>
+                    name="collapserdb" onchange="collapseCards('show')" checked />Show</label><br>
             <label class="form-check-label"><input class="form-check-input hasapplicants" type="radio"
-                    name="collapserdb" onchange="collapseCards('hide')"/>Collapse</label><br>
+                    name="collapserdb" onchange="collapseCards('hide')" />Collapse</label><br>
         </div>
     </div>
 
     <div class="row open-position-container" id="open-position-container">
-		<div class="col-sm-4" id="sample">
-        <div class="card mb-3 target class-card" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)<span
-                    class="float-end right-card-title" id="applicants">0 Applicants</span></h5></a>
-            <div class="card-body collapse"  id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position: <span id="position">Grader</span></label>
-                <a id="seebutton" href="" value="" class="open-position-btn btn btn-primary float-end">See Applicants</a><br>
-                <div class="open-position-input-group btn-primary input-group float-end">
-                    <a id="editbutton" href="" value="" class="input-group-btn btn btn-primary">Edit Notes</a>
-                    <button id="closebutton" value="" class="input-group-btn btn btn-primary">Close Position</button>
+        <div class="col-sm-4" id="sample">
+            <div class="card mb-3 target class-card" id="card">
+                <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+                    <h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)<span
+                            class="float-end right-card-title" id="applicants">0 Applicants</span></h5>
+                </a>
+                <div class="card-body collapse" id="collapseOne">
+                    <label class="card-title mt-2 mb-3">Position: <span id="position">Grader</span></label>
+                    <a id="seebutton" href="" value="" class="open-position-btn btn btn-primary float-end">See
+                        Applicants</a><br>
+                    <div class="open-position-input-group btn-primary input-group float-end">
+                        <a id="editbutton" href="" value="" class="input-group-btn btn btn-primary">Edit Notes</a>
+                        <button id="closebutton" value="" class="input-group-btn btn btn-primary">Close
+                            Position</button>
+                    </div>
+                    <label class="card-title float-start">Notes: </label>
+                    <div class="notes-wrapper admin-notes">
+                        <span id="notes">None</span>
+                    </div>
+                    <br>
                 </div>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper admin-notes">
-                    <span id="notes">None</span>
-                </div>
-                <br>
             </div>
         </div>
-		</div>
-		<!--<div class="col-sm-4">
-        <div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)<span
-                    class="float-end right-card-title" id="applicants">0 Applicants</span></h5></a>
-            <div class="card-body collapse"  id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position: <span id="position">Grader</span></label>
-                <a id="seebutton" href="" value="" class="open-position-btn btn btn-primary float-end">See Applicants</a><br>
-                <div class="open-position-input-group btn-primary input-group float-end">
-                    <a id="editbutton" href="" value="" class="input-group-btn btn btn-primary">Edit Notes</a>
-                    <button id="closebutton" value="" class="input-group-btn btn btn-primary">Close Position</button>
-                </div>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper admin-notes">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-        </div>
-		</div>
-		<div class="col-sm-4">
-        <div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)<span
-                    class="float-end right-card-title" id="applicants">0 Applicants</span></h5></a>
-            <div class="card-body collapse"  id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position: <span id="position">Grader</span></label>
-                <a id="seebutton" href="" value="" class="open-position-btn btn btn-primary float-end">See Applicants</a><br>
-                <div class="open-position-input-group btn-primary input-group float-end">
-                    <a id="editbutton" href="" value="" class="input-group-btn btn btn-primary">Edit Notes</a>
-                    <button id="closebutton" value="" class="input-group-btn btn btn-primary">Close Position</button>
-                </div>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper admin-notes">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-        </div>
-		</div>
-		<div class="col-sm-4">
-        <div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)<span
-                    class="float-end right-card-title" id="applicants">0 Applicants</span></h5></a>
-            <div class="card-body collapse"  id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position: <span id="position">Grader</span></label>
-                <a id="seebutton" href="" value="" class="open-position-btn btn btn-primary float-end">See Applicants</a><br>
-                <div class="open-position-input-group btn-primary input-group float-end">
-                    <a id="editbutton" href="" value="" class="input-group-btn btn btn-primary">Edit Notes</a>
-                    <button id="closebutton" value="" class="input-group-btn btn btn-primary">Close Position</button>
-                </div>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper admin-notes">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-        </div>
-		</div>
-		<div class="col-sm-4">
-        <div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)<span
-                    class="float-end right-card-title" id="applicants">0 Applicants</span></h5></a>
-            <div class="card-body collapse"  id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position: <span id="position">Grader</span></label>
-                <a id="seebutton" href="" value="" class="open-position-btn btn btn-primary float-end">See Applicants</a><br>
-                <div class="open-position-input-group btn-primary input-group float-end">
-                    <a id="editbutton" href="" value="" class="input-group-btn btn btn-primary">Edit Notes</a>
-                    <button id="closebutton" value="" class="input-group-btn btn btn-primary">Close Position</button>
-                </div>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper admin-notes">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-        </div>
-		</div>-->
     </div>
 
     <!--Script added for bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+        </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="script/admin/adminfilter.js"></script>
     <script src="script/admin/adminwrite.js"></script>
     <script type="module" src="script/admin/admindatabase.js"></script>
-	<script src="script/redirect.js"></script>
+    <script src="script/redirect.js"></script>
 </body>
+
 </html>
