--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         <h2 class="page-title">Open Positions</h2>
         <div>
             <a href="login.html" target="_blank" id="newbutton" value=""
-                class="btn-apply btn btn-primary float-end">APPLY</a>
+                class="btn-apply btn btn-primary float-end">APPLY NOW</a>
         </div>
         <div class="input-group search-bar">
             <input type="text" id="Search" onkeyup="Search()" class="form-control search-input"
@@ -80,161 +80,23 @@
         <div class="col-sm-3" id="sample">
             <div class="card mb-3 target class-card" id="card">
                 <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne">
-                    <h5 class="card-header"><span id="classname">IT 390</span><span class="semester">(<span id="semester">Summer</span>)</span></h5>
+                    <h5 class="card-header"><span id="classname">IT 390</span><span class="semester">(<span
+                                id="semester">Summer</span>)</span></h5>
                 </a>
                 <div class="card-body collapse" id="collapseOne">
                     <label class="card-title mt-2 mb-3">Position: </label><span id="position"> Grader</span><br>
                     <label class="card-title float-start">Notes: </label>
                     <div class="notes-wrapper welcome-notes">
-                        <span id="notes">This is an <b>instructor</b> course to apply for this you must be a <b>graduate</b> student and be <b>GTA certified.</b> To learn more about <b>GTA certification</b><a href='https://catalog.umkc.edu/general-graduate-academic-regulations-information/international-graduate-student-academic-regulations/' target='_blank'> click here</a>.</span>
+                        <span id="notes">This is an <b>instructor</b> course to apply for this you must be a
+                            <b>graduate</b> student and be <b>GTA certified.</b> To learn more about <b>GTA
+                                certification</b><a
+                                href='https://catalog.umkc.edu/general-graduate-academic-regulations-information/international-graduate-student-academic-regulations/'
+                                target='_blank'> click here</a>.</span>
                     </div>
                     <br>
                 </div>
             </div>
         </div>
-        <!--<div class="col-sm-3">
-		<div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper welcome-notes">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-        </div>
-		</div>
-		<div class="col-sm-3">
-		<div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper welcome-notes">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-        </div>
-		</div>
-<div class="col-sm-3">
-		<div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper welcome-notes">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-		</div>
-		</div>
-	  <div class="col-sm-3">
-		<div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper welcome-notes">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-        </div>
-		</div>
-		<div class="col-sm-3">
-		<div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper welcome-notes">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-        </div>
-		</div>
-	  <div class="col-sm-3">
-		<div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper welcome-notes">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-		</div>
-		</div>
-	  <div class="col-sm-3">
-		<div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper welcome-notes">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-        </div>
-		</div>
-		<div class="col-sm-3">
-		<div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper welcome-notes">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-        </div>
-		</div>
-<div class="col-sm-3">
-		<div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper welcome-notes">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-		</div>
-		</div>
-	  <div class="col-sm-3">
-		<div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper welcome-notes">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-        </div>
-		</div>
-		<div class="col-sm-3">
-		<div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper welcome-notes">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-        </div>
-		</div>-->
     </div>
 
     <!--Script added for bootstrap-->
