--- a/src/login.html
+++ b/src/login.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--Link added for bootstrap-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="style/css.css">
-  <link rel="icon" href="assets/umkc-logo.png">
-  <title>Login</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Link added for bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style/css.css">
+    <link rel="icon" href="assets/umkc-logo.png">
+    <title>Login</title>
 </head>
 
 <body class="login-page">
@@ -16,16 +18,19 @@
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <div class="card my-5 card-login">
-                    <form id="login" class="card-body cardbody-color p-lg-5 needs-validation login-card-body" novalidate accept-charset="UTF-8" enctype="multipart/form-data" method="GET" onsubmit="">
+                    <form id="login" class="card-body cardbody-color p-lg-5 needs-validation login-card-body" novalidate
+                        accept-charset="UTF-8" enctype="multipart/form-data" method="GET" onsubmit="">
                         <h2 class="text-center mt-4">GTA Application Portal</h2>
-                        
+
                         <div class="text-center">
-                            <img src="assets/umkc-logo.png" class="img-login img-fluid profile-image-pic img-thumbnail my-3" width="200px">
+                            <img src="assets/umkc-logo.png"
+                                class="img-login img-fluid profile-image-pic img-thumbnail my-3" width="200px">
                         </div>
 
                         <div class="input-group mb-3 login-input">
                             <span class="input-group-text"><i class="bi bi-envelope"></i></span>
-                            <input type="text" class="form-control rounded-end" id="email" placeholder="UMKC email or username" required>
+                            <input type="text" class="form-control rounded-end" id="email"
+                                placeholder="UMKC email or username" required>
                             <div class="invalid-feedback">
                                 Please enter your UMKC email or username.
                             </div>
@@ -33,14 +38,15 @@
 
                         <div class="input-group mb-3 login-input has-validation">
                             <span class="input-group-text"><i class="bi bi-lock"></i></span>
-                            <input type="password" class="form-control" id="password" placeholder="Password" pattern="^().{6,24}$" required>
+                            <input type="password" class="form-control" id="password" placeholder="Password"
+                                pattern="^().{6,24}$" required>
                             <div class="invalid-feedback">
                                 Please enter your password for UMKC account.
                             </div>
                         </div>
- 
+
                         <div class="error" id="loginerror"></div>
-                        
+
                         <div class="text-center mt-3">
                             <input type="submit" value="Login" class="btn btn-login px-5 mb-5">
                         </div>
@@ -49,30 +55,33 @@
             </div>
         </div>
     </div>
- <!--Script added for bootstrap-->
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <!--Script added for bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 
- <script>
-    // Example starter JavaScript for disabling form submissions if there are invalid fields
-(function () {
-  'use strict'
-  var html='';
+    <script>
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+        (function () {
+            'use strict'
+            var html = '';
 
-  var forms = document.querySelectorAll('.needs-validation')
+            var forms = document.querySelectorAll('.needs-validation')
 
-  Array.prototype.slice.call(forms).forEach(function (form) {
-      form.addEventListener('submit', function (event) {
-        if (!form.checkValidity()) {
-          event.preventDefault()
-          event.stopPropagation()
-        }
-        form.classList.add('was-validated');  }, false)
-    })
-})()
+            Array.prototype.slice.call(forms).forEach(function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (!form.checkValidity()) {
+                        event.preventDefault()
+                        event.stopPropagation()
+                    }
+                    form.classList.add('was-validated');
+                }, false)
+            })
+        })()
 
- </script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script type="module" src="script/login/login.js"></script>
+    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script type="module" src="script/login/login.js"></script>
 </body>
-</html>
 
+</html>
