update createposition header

--- a/src/createposition.html
+++ b/src/createposition.html
@@ -13,9 +13,17 @@
 </head>
 
 <body>
-  <div class="page-logo">
-    <img src="assets/umkc-logo1.png" class="img-login img-fluid" width="400px">
-	<button type="button" id="logout" class="btn btn-primary ">Logout</button>
+  <div class="header">
+    <img src="assets/umkc-logo2.png" class="img-header" width="180px">
+    <h3 class="header-title">Science and Engineering</h3>
+  </div>
+  <div class="divider"></div>
+  <div class="container-title sticky-top">
+    <h2 class="page-title">Application Form</h2>
+    <div>
+      <a href="login.html" target="_blank" id="newbutton" value=""
+        class="btn-apply btn btn-primary float-end">Logout</a>
+    </div>
   </div>
 
   <div class="position-container">
