--- a/src/applicants.html
+++ b/src/applicants.html
@@ -39,10 +39,18 @@
   <script src="script/redirect.js"></script>
 </head>
 <body>
-        <div class="page-logo">
-            <img src="assets/umkc-logo1.png" class="img-login img-fluid" width="400px">
-			<button type="button" id="logout" class="btn btn-primary ">Logout</button>
-        </div>
+	<div class="header">
+		<img src="assets/umkc-logo2.png" class="img-header" width="180px">
+		<h3 class="header-title">Science and Engineering</h3>
+	  </div>
+	  <div class="divider"></div>
+	  <div class="container-title sticky-top">
+		<h2 class="page-title">Application Form</h2>
+		<div>
+		  <a href="login.html" target="_blank" id="newbutton" value=""
+			class="btn-apply btn btn-primary float-end">Logout</a>
+		</div>
+	  </div>
     
         <div class="container applicantspage my-5" style="width:70%";>
             <h2> Applicants for <span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h2>
