admin media screen

--- a/src/admin.html
+++ b/src/admin.html
@@ -101,18 +101,20 @@
                             class="float-end right-card-title" id="applicants">0 Applicants</span></h5>
                 </a>
                 <div class="card-body collapse" id="collapseOne">
-                    <label class="card-title mt-2 mb-3">Position: <span id="position">Grader</span></label>
-                    <a id="seebutton" href="" value="" class="open-position-btn btn btn-primary float-end">See
-                        Applicants</a><br>
-                    <div class="open-position-input-group btn-primary input-group float-end">
-                        <a id="editbutton" href="" value="" class="input-group-btn btn btn-primary">Edit Notes</a>
-                        <button id="closebutton" value="" class="input-group-btn btn btn-primary">Close
-                            Position</button>
-                    </div>
+                    <label class="card-title mt-2 mb-3">Position: <span id="position">Grader</span></label> <br>
                     <label class="card-title float-start">Notes: </label>
                     <div class="notes-wrapper admin-notes">
                         <span id="notes">None</span>
                     </div>
+
+                        <a id="seebutton" href="" value="" class="mt-2 btn open-position-btn">See
+                            Applicants</a>
+                        <div class="mt-2 open-position-input-group input-group float-end">
+                            <a id="editbutton" href="" value="" class="input-group-btn btn">Edit Notes</a>
+                            <button id="closebutton" value="" class="input-group-btn btn">Close
+                                Position</button>
+                        </div>    
+
                     <br>
                 </div>
             </div>
