Create Position page design

--- a/src/createposition.html
+++ b/src/createposition.html
@@ -19,7 +19,7 @@
   </div>
   <div class="divider"></div>
   <div class="container-title sticky-top">
-    <h2 class="page-title">Application Form</h2>
+    <h2 class="page-title">Create Position</h2>
     <div>
       <a href="login.html" target="_blank" id="newbutton" value=""
         class="btn-apply btn btn-primary float-end">Logout</a>
@@ -30,8 +30,7 @@
     <div class="row">
       <div class="col-lg-11-auto">
         <div class="card my-5">
-          <div class="card-body cardbody-color p-lg-5">
-            <h4 class="mt-2" id="title">Create a new position:</h4>
+          <div class="card-body cardbody-color p-lg-5 new-position-card">
 
             <form id="courseform" class="needs-validation" action="javascript:modal()" novalidate>
               <div class="row">
@@ -110,8 +109,8 @@
                   <textarea class="form-control" style="resize: none; height: 106px;" id="notes" rows="3"></textarea>
                 </div>
               </div>
-              <input action="admin.html" type="submit" value="Create" class="btn btn-primary px-5 mt-4 createbtn">
-              <a href="admin.html" class="mt-4 btn btn-primary "><i class="bi bi-arrow-left"></i></a>
+              <input action="admin.html" type="submit" value="Create" class="btn px-5 mt-4 createbtn">
+              <a href="admin.html" class="mt-4 btn btn-back "><i class="bi bi-arrow-left"></i></a>
             </form>
             <!--<a href="admin.html" type="submit" class="btn btn-primary px-5 mt-4 createbtn" >Create</a>-->
 
