--- a/src/createposition.html
+++ b/src/createposition.html
@@ -29,7 +29,7 @@
   <div class="position-container">
     <div class="row">
       <div class="col-lg-11-auto">
-        <div class="card my-5">
+        <div class="card my-5 card-new-position">
           <div class="card-body cardbody-color p-lg-5 new-position-card">
 
             <form id="courseform" class="needs-validation" action="javascript:modal()" novalidate>
