bold font filter

--- a/src/admin.html
+++ b/src/admin.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="mb-3 p-3 card filter card-filter sticky-left">
-        <label>Major:</label>
+        <label style="font-weight: bold;">Major:</label>
         <div class="form-check" id="test">
             <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="CS"
                     value="CS" onchange="changeCheckbox(this)" />CS</label><br>
@@ -55,14 +55,14 @@
                     value="ECE" onchange="changeCheckbox(this)" />ECE</label><br>
             <!--<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="EE" onchange="filter()"/>EE</label><br>-->
         </div>
-        <label class="mt-2">Position:</label>
+        <label class="mt-2" style="font-weight: bold;">Position:</label>
         <div class="form-check">
             <label class="checkbox form-check-label"><input class="form-check-input position" type="checkbox"
                     id="Grader" value="Grader" onchange="changeCheckbox(this)" />Grader</label><br>
             <label class="checkbox form-check-label"><input class="form-check-input position" type="checkbox"
                     id="Instructor" value="Instructor" onchange="changeCheckbox(this)" />Instructor</label><br>
         </div>
-        <label class="mt-2">Semester:</label>
+        <label class="mt-2" style="font-weight: bold;">Semester:</label>
         <div class="form-check">
             <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox" id="Fall"
                     value="Fall" onchange="changeCheckbox(this)" />Fall</label><br>
@@ -71,7 +71,7 @@
             <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox"
                     id="Summer" value="Summer" onchange="changeCheckbox(this)" />Summer</label><br>
         </div>
-        <label class="mt-2">Level:</label>
+        <label class="mt-2" style="font-weight: bold;">Level:</label>
         <div class="form-check">
             <label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox" id="grad"
                     value="grad" onchange="changeCheckbox(this)" />Graduate</label><br>
