--- a/src/studentform.html
+++ b/src/studentform.html
@@ -42,7 +42,7 @@
   <div class="position-container">
     <div class="row">
       <div class="col-lg-11-auto">
-        <div class="card my-5">
+        <div class="card my-5 card-studentform">
           <div class="card-body cardbody-color p-lg-5 studentform-card-body">
             <form name="Form" id="application" action="javascript:modal()" accept-charset="UTF-8"
               enctype="multipart/form-data" method="POST" onsubmit="" class="needs-validation" novalidate>
