--- a/src/createposition.html
+++ b/src/createposition.html
@@ -19,7 +19,7 @@
   </div>
   <div class="divider"></div>
   <div class="container-title sticky-top">
-    <h2 class="page-title">Create Position</h2>
+    <h2 class="page-title title">Create Position</h2>
     <div>
       <a href="login.html" target="_blank" id="newbutton" value=""
         class="btn-apply btn btn-primary float-end">Logout</a>
