add overflow to applicants table

--- a/src/applicants.html
+++ b/src/applicants.html
@@ -86,7 +86,7 @@
     </div>
 
 	<div class="container applicantspage my-5" style="width:80%" ;>
-		<table class="table table-striped " id="sortTable">
+		<table class="table table-striped display nowrap" id="sortTable" style="width:100%">
 			<thead>
 				<tr>
 					<th>Student Id</th>
