--- a/src/applicants.html
+++ b/src/applicants.html
@@ -85,7 +85,7 @@
         </div>
     </div>
 
-	<div class="container applicantspage my-5" style="width:80%" ;>
+	<div class="container applicantspage my-5" style="width:80%">
 		<table class="table table-striped display nowrap" id="sortTable" style="width:100%">
 			<thead>
 				<tr>
