--- a/src/applicants.html
+++ b/src/applicants.html
@@ -101,7 +101,18 @@
 					<th></th>
 				</tr>
 			</thead>
-
+				<!--<tr>
+					<td>Student Id</td>
+					<td>Name</td>
+					<td>Email</td>
+					<td>Level</td>
+					<td>Major</td>
+					<td>GPA</td>
+					<td>Hours</td>
+					<td><div id="0123456789ABCDEF0123gpa"><select class="gtaselect btn btn-primary form-select" student="0123456789ABCDEF0123"><option value="0" id="0123456789ABCDEF0123">Not Available</option><option value="1" id="0123456789ABCDEF0123">Pending</option><option value="2" id="0123456789ABCDEF0123">Certified</option></select></div></td>
+					<td><div id="0123456789ABCDEF0123doc"><select id="pdfbtn" class="btn btn-primary" student="0123456789ABCDEF0123"><option value="documents" disabled="true" hidden="true" selected="true">Documents</option><option value="resume">Resume</option><option value="transcript">Transcript</option><option value="gta">GTA</option></select></div></td>
+					<td><button type="button" class="btn btn-primary remove" value="0123456789ABCDEF0123">X</button></td>
+				</tr>-->
 			<tbody>
 				
 			</tbody>
