added link for course description

--- a/src/index.html
+++ b/src/index.html
@@ -93,6 +93,7 @@
                                 href='https://catalog.umkc.edu/general-graduate-academic-regulations-information/international-graduate-student-academic-regulations/'
                                 target='_blank'> click here</a>.</span>
                     </div>
+					<a id="link" href="https://catalog.umkc.edu/search/?search=COMP-SCI+191" target="_blank" class="card-title float-start">Course Description</a>
                     <br>
                 </div>
             </div>
