design and css organization and clean up

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <div class="header">
-        <img src="assets/umkc-logo2.png" class="img-header" width="180px">
+        <img src="assets/umkc-logo2.png" class="img-header">
         <h3 class="header-title">Science and Engineering</h3>
     </div>
     <div class="divider"></div>
@@ -34,12 +34,12 @@
         <h2 class="page-title">Open Positions</h2>
         <div>
             <a href="login.html" target="_blank" id="newbutton" value=""
-                class="btn-apply btn btn-primary float-end">APPLY NOW</a>
+                class="btn btn-apply float-end">APPLY NOW</a>
         </div>
         <div class="input-group search-bar">
             <input type="text" id="Search" onkeyup="Search()" class="form-control search-input"
                 placeholder="Search Class" aria-label="Search Position" aria-describedby="search-addon" />
-            <span class="btn search-btn float-end" id="advanced-search-button" type="button">
+            <span class="btn search-btn float-end search-btn" id="advanced-search-button" type="button">
                 <i class="fa fa-search"></i>
             </span>
         </div>
