--- a/src/login.html
+++ b/src/login.html
@@ -50,7 +50,7 @@
                         <div class="error" id="loginerror"></div>
 
                         <div class="text-center mt-3">
-                            <input type="submit" value="Login" class="btn btn-login px-5 mb-5">
+                            <input type="submit" value="Login" class="btn btn-login submit-btn px-5 mb-5">
                         </div>
                     </form>
                 </div>
