--- a/src/studentform.html
+++ b/src/studentform.html
@@ -34,7 +34,7 @@
   <div class="container-title sticky-top">
     <h2 class="page-title">Application Form</h2>
     <div>
-      <a id="logout" class="btn-apply btn btn-primary float-end">Logout</a>
+      <a id="logout" class="btn btn-apply float-end">Logout</a>
     </div>
   </div>
 
@@ -220,7 +220,7 @@
                 <label hidden class="input-group-text gtafile file-label label-size" for="gf">GTA</label>
                 <div class="input-group-prepend">
                   <button type="button"
-                    class="btn btn-primary dropdown-toggle dropdown-toggle-split file-dropdown-toggle"
+                    class="btn submit-btn dropdown-toggle dropdown-toggle-split file-dropdown-toggle"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   </button>
                   <div class="dropdown-menu">
@@ -236,7 +236,7 @@
                   You must upload proof of GTA certification or a waiver.
                 </div>
               </div>
-              <input type="submit" value="Submit" id="form-submit" class="btn btn-primary mt-3">
+              <input type="submit" value="Submit" id="form-submit" class="btn submit-btn mt-3">
             </form>
             <!-- Message Form was submitted successfully-->
             <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
